# TI-Engine

./: CMakeLists.txt  LICENSE  MainScene.sb  README.md  TI-PreCompiler.exec  imgui.ini  scene4rLoad.sb  svtable.tipc
Editor/: CMakeLists.txt
Editor/EditorCode/: EditorExternal.cpp  EditorExternal.h
EngineCode/: Editor.cpp  Editor.h  main.cpp
EngineCore/: CMakeLists.txt  GameMaster.cpp  Render.cpp  Render.h  Transform.h  Utils.h
EngineCore/Components/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h
EngineCore/CoreCode/: API.h  CollisionEventManager.cpp  Component.h  GameObject.cpp  RayCastHandler.cpp  Render.cpp  ResourceManager.cpp  Scene.cpp
EngineCore/CoreCode/Components/: Mesh.h
EngineCore/CoreCode/GUI/: Button.h  Control.h  Grid.cpp  Panel.cpp
EngineCore/CoreCode/Game/: EnemyAI.cpp  EnemyAI.h  FPSDraw.cpp  PlayerController.h
EngineCore/GUI/: Control.cpp  Grid.cpp  Panel.cpp  Panel.h
EngineCore/Game/: Bullet.cpp  Car.cpp  Car.h  FPSDraw.cpp  PlayerController.cpp
EngineCore/Libraries/ImGUI/: imconfig.h
EngineCore/cmake/: TIECoreConfig.cmake
EngineCore/cmake/TIECore/: TIECoreConfig.cmake  TIECoreTargets.cmake
Libraries/ImGUI/: imgui.cpp
Scenes/: GUIOOP.sb  MainScene.sb  RoadTest.sb  TI-Carma.sb  TestDeserialize.sb  TestFix.sb  TestRotate.sb  scene4rLoad.sb  testSave
TI-Engine/Editor/: Editor.cpp  Editor.h  main.cpp
src/: CollisionEventManager.cpp  CollisionEventManager.h  Component.cpp  Component.h  Editor.cpp  Editor.hpp  GameMaster.cpp  GameMaster.h  GameObject.cpp  GameObject.h  RayCastHandler.cpp  RayCastHandler.h  Render.cpp  Render.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Serializable.cpp  Serializable.h  SerializableGenerator.cpp  Transform.cpp  Transform.h  Utils.cpp  Utils.h  main.cpp
src/Components/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  PhysBody.cpp  PhysBody.h  RigidBody.h  ShapeMesh.cpp  ShapeMesh.h  SpriteMesh.cpp  SpriteMesh.h
src/GUI/: Button.cpp  Control.h  GUI_impl.h  Grid.h
src/Game/: Bullet.cpp  Car.cpp  Car.h  EnemyAI.cpp  EnemyAI.h  FPSDraw.cpp  Objects.cpp  PlayerController.cpp  PlayerController.h  ShaderSystem.cpp  ShaderSystem.h
