cmake_minimum_required(VERSION 3.0.0)
project(TI-Engine VERSION 0.1.0)
enable_testing()
aux_source_directory(src/Components CMP)
aux_source_directory(src SRC)
aux_source_directory(src/Game GAM)
include_directories(src)

include_directories(Libraries/ImGUI)
aux_source_directory(Libraries/ImGUI ImGUI)

include_directories(Libraries)
aux_source_directory(Libraries JSON)
SET(FLAGS "-Wformat-security")

add_executable(TI-Engine src/main.cpp ${SRC} ${CMP} ${GAM} ${ImGUI} ${JSON})
add_definitions(${FLAGS})
find_package(OpenGL REQUIRED)
target_link_libraries (TI-Engine -lsfml-graphics -lsfml-window -lsfml-system -lBox2D -lpthread -lstdc++fs ${OPENGL_LIBRARIES} )
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
